--- a/10申请签证.md
+++ b/10申请签证.md
@@ -4,6 +4,8 @@
 > * 签证效力知识普及（以短句+外链形式）
 > * 《授权信》相关
 > * 极端情况下直接提请移民局介入的相关跟进
+> * 缴费相关
+> * 所递交材料骑缝章相关（视实际情况而定）
 
 #### **1. 需要申请签证的人员**
 
@@ -18,7 +20,7 @@
 
 ^
 
-> [warning] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员***。*如在中国、瑞士以外的第三国办理签证，流程和所需材料可能有所不同，请以苏黎世州移民局、瑞士驻当地使领馆公告及校方要求为准*。
+> [warning] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员***。\**如在中国、瑞士以外的第三国办理签证，流程和所需材料可能有所不同，请以苏黎世州移民局、瑞士驻当地使领馆公告及校方要求为准*。
 
 ^
 
@@ -31,19 +33,17 @@
 
 #### **3. 申请材料**
 
-在“申请签证”这件可以一票决定你未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，官方信息来源有[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)。以下仅为对它们的简要梳理，**我们强烈建议直接阅读相关原文并获取信息**！
+对于“申请签证”这件可以一票决定未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，其包含[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)等。
+以下仅为对它们的简要梳理，我们强烈建议**直接阅读相关原文并获取信息**！
 
-> [danger] *瑞士的信息公开做得很好，来到瑞士，请学会自己检索搜集整理信息并作出决定*。
+> [danger] 【学联提醒】*瑞士的信息公开做得很好，来到瑞士，请学会自己检索搜集整理信息并作出决定*
 
-你的申请材料将经由使领馆转交给苏黎世州移民局，苏黎世州移民局将审核你的签证材料并决定是否发签。最终决定权在苏黎世州移民局手上，使领馆仅负责转交材料并在移民局批准后通知你贴签。
-
-> 苏黎世州移民局对于签证申请的相关政策法规可见（德语）
->
-> <https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
+使领馆收到申请材料后，会将其转交给苏黎世州移民局，由移民局审核签证材料并决定是否发放签证。即：最终决定权在苏黎世州移民局，使领馆仅负责转交材料并在移民局批准后通知前往贴签。
+苏黎世州移民局对于签证申请的相关政策法规可参见：[Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)
 
 ^
 
-请详细阅读学校给出的申签材料清单 ，清单可在下方链接里查看。**请以学校官网信息作为申签指导**！
+关于申请签证所需材料，请详细阅读所在学校给出的申签材料清单（见下文），并以学校官网信息作为申签指导**！
 
 > **ETH申请材料指导清单（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
 >
