--- a/10申请签证.md
+++ b/10申请签证.md
@@ -20,7 +20,7 @@
 
 ^
 
-> [warning] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员***。\**如在中国、瑞士以外的第三国办理签证，流程和所需材料可能有所不同，请以苏黎世州移民局、瑞士驻当地使领馆公告及校方要求为准*。
+> [info] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员***。\**如在中国、瑞士以外的第三国办理签证，流程和所需材料可能有所不同，请以苏黎世州移民局、瑞士驻当地使领馆公告及校方要求为准*。
 
 ^
 
@@ -43,28 +43,18 @@
 
 ^
 
-关于申请签证所需材料，请详细阅读所在学校给出的申签材料清单（见下文），并以学校官网信息作为申签指导**！
+关于申请签证所需材料，请详细阅读所在学校给出的申签材料清单（见下文），并**以学校官网信息作为申签指导**。
+- [ETH申请材料指导清单](<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>)
+*该清单中内容由ETH与苏黎世州移民局合作编写，**满足苏黎世州移民局官方最新要求**。请注意，**本科生和硕士生所需递交的材料有所不同***。
+- [UZH申请材料指导清单](<https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>)
+*本页提供的信息仅供参考，不保证完全准确。这些信息所依据的法规自上次审查以来可能已经发生变化。有关具有法律约束力的信息，请查阅苏黎世州移民局的网站或联系当地的瑞士使领馆。*
 
-> **ETH申请材料指导清单（注意本科生和硕士生不一样**）<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>
->
-> 这些信息由ETH与苏黎世州移民局合作编写，**满足苏黎世州移民局官方最新要求**。
->
-> ^
->
-> **UZH申请材料指导清单**
->
-> <https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>
->
-> 本页提供的信息仅供参考，不保证完全准确。这些信息所依据的法规自上次审查以来可能已经发生变化。有关具有法律约束力的信息，请查阅苏黎世州移民局的网站或联系瑞士驻你所在国的大使馆。
+一般，需要向学校递交的材料包括但不限于：
 
-^
-
-以下为仅为经验总结的**各材料需注意点**：
-
-* 申请表（National Type D Visa）
+* 申根D类签证申请表（National Type D Visa）
 * 护照（注意护照有效期，如有效期一年内，则建议先换护照）
 * 护照照片（背景+尺寸按使领馆要求）
-* 学校注册确认信（ETH: Anmeldebestätigung / Confirmation of Registration）
+* 学校注册确认信（ETH: Anmeldebestätigung / Confirmation of Application）
 * 简历（需注明语言水平）
 * 本科毕业证（如果毕业证不是英语或德语的，需**公证成德语**。公证一般需要较长时间，请提前做好安排）
 * 动机信（motivation letter，简短）
