Update .topwrite/assets/Aus- und Weiterbildung.pdf, 10申请签证.md, 13赴瑞机票.md, 30学联服务.md, 35“户口”相关.md, 37人身财产安全.md, 37其他相关事项.md, SUMMARY.md, 人身财产安全受到侵害时的应对.md, 对于Party扰民的应对.md, 护照/居留证遗失后的应对.md, 报警和法律援助.md, 防诈反诈.md Delete 36人身财产安全.md, TEST.md

--- a/10申请签证.md
+++ b/10申请签证.md
@@ -1,9 +1,12 @@
-> [warning] 本章节后期考虑简要添加以下内容，部分信息将请新生提供：
->
+> [success] 本章作者：杜超瑜、杨锦涛、赵逸飞
+
+> [danger] 【学联提醒】*对于“申请签证”这件可以一票决定未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，包含[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)等。以下仅为针对它们的简单总结与梳理，我们强烈建议**直接阅读相关原文并获取信息**！*
+
+>  [warning] 本章节后期考虑简要添加以下内容（如必要，部分信息将请新生提供）：
 > * 签证更改（如姓名写错，希望更改最早准许入境日期等） 的可能性及对接方
 > * 签证效力知识普及（以短句+外链形式）
 > * 《授权信》相关
-> * 极端情况下直接提请移民局介入的相关跟进
+> * 极端情况下直接提请移民局介入之方案的相关跟进
 > * 缴费相关
 > * 所递交材料骑缝章相关（视实际情况而定）
 
@@ -20,28 +23,21 @@
 
 ^
 
-> [info] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员***。\**如在中国、瑞士以外的第三国办理签证，流程和所需材料可能有所不同，请以苏黎世州移民局、瑞士驻当地使领馆公告及校方要求为准*。
+> [info] *以下内容**仅适用于在中国（北京、上海、广州、香港）办理签证人员**，同时**仅针对就读苏黎世州高等院校人员**。如在中国、瑞士以外的第三国办理签证的，或是就读瑞士中学的，或是就读苏黎世州以外的高等院校的，流程和所需材料可能有所不同，请以当地移民局、瑞士驻当地使领馆公告及校方要求为准。*
 
 ^
 
-#### **2. 申请签证的时间**
+#### **2. 申请签证的时间与涉及单位**
 
 * 对于**本科与硕士**学生，在收到录取通知书后即可着手准备申请签证所需的材料。ETH官网推荐**最晚在计划入境前3个月**递交申请。理论上，整个审核过程理论需 8-12 周；而根据经验，实际审核时长约为1个月。
 * 对于博士学生，因需要的签证类型为工作签，必须由学校代为申请（实际操作上一般由组内秘书代为申请）。
 
+使领馆收到申请材料（具体见下文）后，会将其转交给苏黎世州移民局，由移民局负责审核签证材料并决定是否发放签证。即：最终决定权在苏黎世州移民局，使领馆仅负责转交材料并在移民局批准后通知前往贴签。苏黎世州移民局对于签证申请的相关政策法规可参见：[Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)
+
 ^
 
 #### **3. 申请材料**
-
-对于“申请签证”这件可以一票决定未来人生走向的大事上，学联强烈推荐**直接且仔细阅读官方信息来源**，其包含[苏黎世州移民局](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)，[ETH](https://ethz.ch/en/studies/international/after-admission/immigration/visa.html)，[UZH](https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html)，[瑞士驻华使领馆](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)等。
-以下仅为对它们的简要梳理，我们强烈建议**直接阅读相关原文并获取信息**！
-
-> [danger] 【学联提醒】*瑞士的信息公开做得很好，来到瑞士，请学会自己检索搜集整理信息并作出决定*
-
-使领馆收到申请材料后，会将其转交给苏黎世州移民局，由移民局审核签证材料并决定是否发放签证。即：最终决定权在苏黎世州移民局，使领馆仅负责转交材料并在移民局批准后通知前往贴签。
-苏黎世州移民局对于签证申请的相关政策法规可参见：[Einreise ohne Erwerbstätigkeit für Drittstaatsangehörige](https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html)
-
-^
+> [danger] 【学联提醒】不要用旅游签证入境瑞士留学！
 
 关于申请签证所需材料，请详细阅读所在学校给出的申签材料清单（见下文），并**以学校官网信息作为申签指导**。
 - [ETH申请材料指导清单](<https://ethz.ch/en/studies/international/after-admission/immigration/visa.html>)
@@ -49,59 +45,40 @@
 - [UZH申请材料指导清单](<https://www.uzh.ch/cmsssl/en/studies/application/entry/guidelines.html>)
 *本页提供的信息仅供参考，不保证完全准确。这些信息所依据的法规自上次审查以来可能已经发生变化。有关具有法律约束力的信息，请查阅苏黎世州移民局的网站或联系当地的瑞士使领馆。*
 
-一般，需要向学校递交的材料包括但不限于：
+一般，需要递交的材料包括但不限于：
 
-* 申根D类签证申请表（National Type D Visa）
-* 护照（注意护照有效期，如有效期一年内，则建议先换护照）
-* 护照照片（背景+尺寸按使领馆要求）
-* 学校注册确认信（ETH: Anmeldebestätigung / Confirmation of Application）
-* 简历（需注明语言水平）
-* 本科毕业证（如果毕业证不是英语或德语的，需**公证成德语**。公证一般需要较长时间，请提前做好安排）
-* 动机信（motivation letter，简短）
-* 学习计划（study plan，简短）
-* 毕业计划（future plan，简短）
-* ~~毕业离境承诺书~~【高等院校（Hochschule）学生**不需要提交**书面的毕业离境承诺书！】
+* [申根D类签证申请表](<https://www.sem.admin.ch/sem/en/home/themen/einreise/visumantragsformular.html>)（National type D visa application form）
+* 护照（注意护照有效期及剩余空白页数；如一年内到期的或剩余空白页数不足2页的，建议先申领新护照）
+* 护照照片（背景及尺寸以使领馆要求为准）
+* 学校的录取通知书/申请确认信（ETH: Anmeldebestätigung / Confirmation of Application）
+* 简历（须注明语言水平）
+* 本科毕业证（若毕业证语言非英语或德语，则须**翻译成德语并公证**；一般需要较长时间，请提前安排）
+* 动机信（Motivation Letter，简短）
+* 学习计划（Study Plan，简短）
+* 毕业计划（Future Plan，简短）
+* ~~毕业离境承诺书~~
+*根据苏黎世州移民局<Weisung: :attachment[Aus- und Weiterbildung.pdf]{src=".topwrite/assets/Aus- und Weiterbildung.pdf" size="445.17 kB"}> 的2.4.3.2. Wiederausreiseverpflichtung条款，来苏黎世州接受高等教育（Hochschule）的非申根区人员**不需要提交书面的毕业离境承诺书**，因为其毕业后有可能会留在瑞士工作。*
 
-> 根据苏黎世州移民局《Weisung: Aus- und Weiterbildung aus Drittstaaten》 的2.4.3.2. Wiederausreiseverpflichtung 条款，来苏黎世州接受高等教育（Hochschule）的非申根区人员**不需要提交书面的毕业离境承诺书**，因为其毕业后有可能会留在瑞士工作。
->
-> 详情可见：<https://www.zh.ch/de/migration-integration/einreise/einreise-ohne-erwerbstaetigkeit-fuer-drittstaatsangehoerige.html>
+* 银行存款证明
+*该笔存款须存入**自己名下**（而非父母名下），且须存入**苏黎世州移民局[指定的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)** 中。截至2023年7月，中国银行、中国建设银行和中国工商银行均在列。
+苏黎世州移民局不要求冻结该笔存款，但各使领馆可能有该项要求，且要求变动极为频繁。因此，在换汇冻结前请先邮件咨询对应使领馆（见下文），并关注新生群内相关动态。学联也欢迎大家随时在群中分享自己的经验。*
 
-* 银行存款（**请存入苏黎世州移民局**[接受的银行](https://www.finma.ch/en/~/media/finma/dokumente/bewilligungstraeger/pdf/beh.pdf?la=de)**中**，2023年5月名单包含：建行、工行和中行。苏黎世州移民局没有存款冻结要求，但各使领馆有自己的存款冻结要求。每个使领馆的冻结要求不一样，而且每年都在变。因此，在换汇冻结前请先邮件咨询你递签领区的使领馆，并分享/关注新生群内相关消息）
-
-^
-
-**除满足上述移民局的要求外**，**请注意还要满足**[瑞士驻中国使领馆的材料要求](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)。（即便使领馆只负责转交签证申请材料给苏黎世州移民局，但为避免递签时不必要的误会和麻烦，请同样遵守使领馆的材料要求！）
-
-具体请下载下方链接中的PDF查看：
-
-> **使领馆递签材料要求**<https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html>
-
+此外，尽管使领馆只负责向苏黎世州移民局转交材料，但为避免不必要的误会和麻烦，所提交材料在满足上述移民局要求以外还须**满足[瑞士驻华使领馆的材料要求](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/documents-national.html)**。鉴于使领馆和移民局的要求不完全一致，在此需要**取两者之并集**，将所有相关材料递交给使领馆以确保签证办理顺利。
 ![](.topwrite/assets/image_1682753598509.png =406)
 
-**使领馆和移民局要求不完全一样**，**需要取两者要求的并集，把所有的材料都递交上去**！
-
 ^
 
-#### **4. 注意事项**
+#### **4. 相关咨询渠道**
 
-* **不要用旅游签证进入瑞士**
-* 上述学校官网建议的申请材料仅针对苏黎世州的高等院校
-* 存款必须存在**自己的名下**，不可以存在父母名下
-
-^
-
-#### **5. 相关咨询渠道**
-
-##### **1) 参考校方网站 / 向校方邮件咨询（回复速度较快**）
-
+##### **1) 参考校方网站 / 向校方邮件咨询**
 * [ETH International Student Office](https://ethz.ch/students/en/studies/international-students.html)
-
 * [UZH for International Students and Scholars](https://www.internationals.uzh.ch/en.html)
 
+一般，校方的响应速度较快。
 ##### **2) 向递签的使领馆邮件/电话咨询**
 
 * [瑞士驻华使领馆联系方式汇总](https://www.eda.admin.ch/countries/china/en/home/representations.html)
-  *点击对应使领馆可查看该馆签证（Visa）相关问题的**咨询邮箱**及**电话热线***（*如选择电话咨询，请务必注意其可用时间*）
+  *点击对应使领馆可查看该馆针对签证相关问题的**咨询邮箱及电话热线**。如选择电话咨询，请务必注意其可用时间。*
 
 ##### **3) 咨询苏黎世州移民局**
 
@@ -112,14 +89,14 @@
 
 ^
 
-#### **6. 递交签证材料的地点和预约方式**
+#### **5. 递交签证材料的地点和预约方式**
 
 瑞士在中国设有一个大使馆（北京）和四个总领馆（上海、广州、成都、香港）（瑞士驻成都总领馆领区的签证业务由北京的瑞士驻华大使馆代管），**各使领馆对应领区（签证业务受理范围）和预约链接见**[Switzerland and China - Where to apply for a national visa](https://www.eda.admin.ch/countries/china/en/home/visa/entry-ch/more-90-days/where-to-apply-national.html)。
 
 ^
 
-#### **7. 补交材料**
+#### **6. 补交材料**
 
-> [warning] *该部分内容汇总自群聊，需要额外核实*。
+> [warning] *该部分内容汇总自群聊，其中关于”收信流程“和”原件补交流程“的部分需要额外核实*。
 
 当递交的材料不足时，移民局可能会向申请人致信要求补交材料。届时，申请人将收到对应使领馆的通知，要求本人前往并签收该信件。此时，务必按照信中时间要求补交相关材料。如移民局未强调需要原件的，可将相关文件的电子版/扫描版通过前文所述的[联系表格](https://www.zh.ch/de/migration-integration/kontaktformularmigrationsamt-ohne-zhnr.html)补交给移民局；如移民局强调需要原件的，建议向在场的工作人员咨询补交方法。
