--- a/30学联服务.md
+++ b/30学联服务.md
@@ -1,3 +1,5 @@
+> [success] 本章作者：杨锦涛
+
 #### **1. 学联官方渠道**
 
 * 学联官网：<https://www.acssz.org/>
@@ -15,13 +17,13 @@
 
 ^
 
-#### **3. 学联《苏黎世留学指南》（本文**）&#x20;
+#### **3. 学联《苏黎世留学指南》**&#x20;
 
-<https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>
+[《苏黎世留学指南》](<https://8lrx8emp45.k.topthink.com/@dayihui2023/00huanyingye.html>)
 
 ^
 
-#### **4. 学联专属SIM卡折扣：Sunrise LEBARA**
+#### **4. 学联专属SIM卡折扣：Sunrise & LEBARA**
 
 ![](.topwrite/assets/image_1682199817339.png =204)![](.topwrite/assets/image_1682199826817.png =188)
 ![](.topwrite/assets/image_1682192038118.png =245)
@@ -46,8 +48,8 @@
 
 #### **7. 电子学联卡**
 
-微信搜索小程序”ACSSZ“，上传相关材料即可办理。
-材料审核通过后在学联合作商家处凭该卡消费可享9折优惠。
+微信搜索小程序”ACSSZ“，按要求填写信息并上传材料即可办理。
+材料审核通过后，在学联合作商家处凭该卡消费可享9折优惠。
 
 ^
 
