--- a/人身财产安全受到侵害时的应对.md
+++ b/人身财产安全受到侵害时的应对.md
@@ -1,3 +1,5 @@
+>[success] 本章作者：陈雨航
+
 虽然瑞士相对于周边国家来说犯罪率低很多，但这并不意味着我们在学习生活中可以忽视自身安全问题。在瑞士街头的隐秘角落可能仍然存在个别觊觎我们财物的不法分子和仇视亚裔的极端排外势力。再者，本地警方由于整体安逸的社会环境，对非恶性犯罪事件的侦破能力或有待提高。因此，我们仍需尽最大努力保护个人人身与财产安全。学联在此通过三个阶段建议大家，如何做好自身防护。
 
 #### **第一阶段：未雨绸缪，防患未然**
