--- a/报警和法律援助.md
+++ b/报警和法律援助.md
@@ -1,42 +1,57 @@
-> [success] 本章作者：赵逸飞，李敬淇
+> [success] 本章作者：赵逸飞、李敬淇
 
 > [success] 特别鸣谢：李敬淇
 
-> [danger] 【***学联提醒】如遇到突发事件，在保证自身安全的前提下，请尽量第一时间报警（而非事后再向警方报案***）！
-
-> [warning] *本章编写尚未完成*
+> [danger] 【学联提醒】*如遇到突发事件，在保证自身安全的前提下，请尽量第一时间报警（而非事后再向警方报案）！*
 
 > [warning] *本章节关于SBB铁路警察的管辖范围需要额外核实*。
 
-#### **1. 报案注意事项**
+#### **1. 报案流程及注意事项**
 
-关于在瑞报警相关事项，如
+##### **1). 非紧急情况（如物品被盗、遭遇诈骗等）下的报案：赴警局报案**
+- 对于非紧急情况，即警员出警对解决问题没有任何帮助的，一般建议当事人前往**案件发生地的警局**报案：
+*可通过[e-Police平台](<https://www.suisse-epolice.ch/#/search-station>)查询瑞士境内某地的管辖警局*
+-- 如案件发生在苏黎世市的，应前往苏黎世市警察局，即Stadtpolizei；
+-- 若案件发生在苏黎世郊区的，或是已知嫌疑人逃窜到苏黎世州其他市镇的，或是有重要涉案物品（如被盗物品）在苏黎世州其他市镇的，应前往该市镇的州警察局派出机构（Kantonspolizei）
+- 报案时需要**携带个人有效身份证件**
+- 到警察局后可直接说明需要报案，即会有警员接待，**按其要求登记个人信息并回答问题即可**，在此需要详细描述案件的所有细节。有时，负责警员可能要求报案人填写一份表格
+*对于**盗窃案件**，若能通过定位装置（例如AirTag）定位到被盗物品的位置，可以要求警员陪同前往其显示的地点。若找到被盗物品但是不能确定嫌疑人的，勿第一时间用手触碰被盗物品，以备警员采集指纹并与报案人生物信息进行比对。
+此外，当被盗物品得以找回时，取回物品时须首先向警察**证明丢失物品的所有权**。*
+- 若报案后警员无法采取进一步行动的，一般会给报案人**一张名片和一份受案回执**，需妥善保存好。若有进一步的线索，警方将通过邮件或电话联系报案人。
+- 一般，警员**无权向嫌疑人索要赔偿**，若需要赔偿的话**须在法院起诉**，可参考后文”法律援助“部分
+- 案件查清后，警局会向报案人通过邮寄方式**寄送一封信函**，其中会说明以对嫌疑人采取的措施。如信中无额外要求，则不需有任何动作，反之按信中要求执行即可
 
-* 防空警报相关事项
-* 火警相关事项
-* 交通事故相关事项
-
-可参考[ch.ch - Emergencies and danger in Switzerland](https://www.ch.ch/en/safety-and-justice/emergencies-and-danger#emergency-numbers-in-switzerland)。
+##### **2). 紧急情况下的报案：电话报案**
+- 对于紧急情况，请在**保证自身安全的前提下尽快报案**（报警电话见下文）
+- 报案时，请**简要阐明案情经过并告知地址**以方便出警
+- 如有人受伤的，或现场有火情的，请同时向急救部门和消防部门报案，报案要求同上（报警电话见下文）
+- 警员到达后，**按其要求登记个人信息并回答问题即可**，在此需要详细描述案件的所有细节。有时，负责警员可能要求报案人填写一份表格
+- 若报案后警员无法采取进一步行动的，一般会给报案人**一张名片和一份受案回执**，需妥善保存好。若有进一步的线索，警方将通过邮件或电话联系报案人。
+- 一般，警员**无权向嫌疑人索要赔偿**，若需要赔偿的话**须在法院起诉**，可参考后文”法律援助“部分
+- 案件查清后，警局会向报案人通过邮寄方式**寄送一封信函**，其中会说明以对嫌疑人采取的措施。如信中无额外要求，则不需有任何动作，反之按信中要求执行即可
+- 关于交通事故、火警等的报案，请参考[ch.ch: Emergencies and danger in Switzerland](https://www.ch.ch/en/safety-and-justice/emergencies-and-danger#emergency-numbers-in-switzerland)
 
 ^
 
 #### **2. 瑞士紧急电话列表**
+> [danger] 【学联提醒】*本列表建议截图收藏以备不时之需*。
 
 | 事项                                           | 电话                              | 备注          |
 | -------------------------------------------- | ------------------------------- | ----------- |
 | 警察/公安 Polizei                                | 112                             | 欧洲（含瑞士）通用   |
 | 警察/公安 Polizei                                | 117                             | 仅限瑞士使用      |
-| 铁路警察&#xA; SBB-Transportpolizei               | 0800 117 117                    | 仅限SBB管内线路使用 |
+| 铁路警察&#xA; SBB-Transportpolizei               | +41 0800 117 117                    | 仅限SBB管内线路使用 |
 | 火警/消防 Feuerwehr                              | 118                             | 仅限瑞士使用      |
 | 急救  Sanität                                  | 144                             | 仅限瑞士使用      |
 | 生化防毒&#xA;Toxikologisches Informationszentrum | 145                             | 仅限瑞士使用      |
 | ETH应急电话                                      | 内线：888；&#xA;外线：+41 44 342 11 88 | 仅限ETH内部使用   |
 | 外交部全球领事保护与服务应急热线                             | +86 10 12308                    |             |
 | 驻瑞士大使馆领事保护应急热线                               | +41 31 350 1258                 |             |
-| 驻苏黎世总领馆领事保护应急热线                              | +41 44 2091503                  |             |
+| 驻苏黎世总领馆领事保护应急热线                              | +41 44 209 1503                  |             |
 
 ^
 
-案件发生之后，去嫌疑人可能所在的州辖区警察局，如果在苏黎世内可以去市警察局（Stadtpolizei）， 如果嫌疑人可能已经离开苏黎世市区去往其他的城市，可以去州警察局（Kantonspolizei）报警。去报案前需要携带个人身份证件。到警察局之后直接说需要报案就可以，之后按警察要求回答问题和登记个人信息，有些情况下警察可能给你一个表格，需要详细描述案件的所有细节。在盗窃案件中如果能通过定位器（比如Airtag）定位到被盗物品的位置，可以要求警察陪同去往定位器显示的地点。如果找到了被盗物品但是不能确定嫌疑人，请不要第一时间用手触碰被盗物品，警察一般会采集物品上的指纹并与你的生物信息做比对。如果在报案之后无法采取进一步行动，警察一般会给你一张名片和报案回执，如果有进一步的线索可以通过邮件或电话保持联系。在盗窃案件中，需要向警察证明丢失物品的所有权，才可取回物品。一般警察无法向嫌疑人索要赔偿，如果需要赔偿的话需要另去法院起诉。
+#### **3. 法律援助**
+> [warning] *本部分内容后期可能复制至其他章节*
 
-在结案之后警察局会发给你一封纸质信，信里说明找到了嫌疑人并采取了什么样的措施，如果未在信中明确说明就不用做任何事情了。
+作为ETH或UZH的学生，可享受学校提供的法律咨询服务，参见[VSUZH-Legal advice](<https://en.vsuzh.ch/rechtsberatung>)。此外，还可参考[ETH Rechtsweg](<https://ethz.ch/studierende/de/studium/rechtsweg.html>)获得其他相关信息。
