--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -2,13 +2,13 @@
 
 > [success] 特别鸣谢：中国驻苏黎世总领馆
 
-> [info] *如你在瑞士经历过诈骗的，欢迎将相关经历通过*<info@acssz.org>*分享给我们，或在*[学联论坛](https://forum.acssz.org/)*中分享，以帮助更多同学识破诈骗分子的阴谋*。
+> [info] *如你在瑞士经历过诈骗的，欢迎将相关经历通过<info@acssz.org>分享给我们，或在[学联论坛](https://forum.acssz.org/)中分享，以帮助更多同学识破诈骗分子的阴谋。*
 
 ### **1. 在瑞常见诈骗手段的介绍、识别与预防**
 
 #### **1.1 私下换汇相关诈骗**
 
-> [danger] 【***学联提醒】无论是在中国还是在瑞士，私下换汇行为都可能涉嫌违法；如有犯罪分子利用私下换汇行为进行洗钱活动的，换汇人还可能涉嫌犯罪，需要追究刑事责任（参考***：[《留学生私下换汇被判刑 哪些行为涉嫌“洗钱”？》](https://lx.huanqiu.com/article/9CaKrnK9SJX)）；***请自行斟酌有关风险***！！！
+> [danger] 【学联提醒】*无论是在中国还是在瑞士，私下换汇行为都可能涉嫌违法；如有犯罪分子利用私下换汇行为进行洗钱活动的，换汇人还可能涉嫌犯罪，需要追究刑事责任（参考：[《留学生私下换汇被判刑 哪些行为涉嫌“洗钱”？》](https://lx.huanqiu.com/article/9CaKrnK9SJX)）；请自行斟酌有关风险！！！*
 
 * **诈骗方式**： 线下诈骗，“物理”跑路
 * **诈骗团伙**： 欧洲当地的诈骗团伙（多为华人）
@@ -28,7 +28,7 @@
 
 #### **1.2 “天上掉黑锅”类 / “无辜失联”类**
 
-> [danger] 【***学联提醒】 在任何情况下，驻瑞士使领馆和快递公司都不会介入办案，也不会电话通知涉案，更不会提供向公安部门转接电话的“服务”。同时，国内长期以来大力宣传的”96110电话一定要接“在国外并不适用***。
+> [danger] 【学联提醒】 *在任何情况下，驻瑞士使领馆和快递公司都不会介入办案，也不会电话通知涉案，更不会提供向公安部门转接电话的“服务”。同时，国内长期以来大力宣传的”96110电话一定要接“在国外并不适用。*
 
 * **诈骗方式**： 电话诈骗
 * **诈骗团伙**： 中国台湾、缅甸、柬埔寨等地的诈骗团伙
@@ -73,7 +73,7 @@
 
 #### **1.3 机票相关诈骗**
 
-> [danger] 【***学联提醒】在任何情况下，航司官网和正规OTA平台都比私人票代可靠。此外，奖励客票（俗称“里程票“）不允许通过航司官方以外渠道买卖***。
+> [danger] 【学联提醒】*在任何情况下，航司官网和正规OTA平台都比私人票代可靠。此外，奖励客票（俗称“里程票“）不允许通过航司官方以外渠道买卖。*
 
 * **诈骗方式**： “收钱不出票”/“出具虚假客票”/违规出售里程票
 * **诈骗团伙**： 私人票代
@@ -89,7 +89,7 @@
 
 #### **1.4 街头求助搭讪类**
 
-> [danger] 【***学联提醒】在任何情况下都不要上陌生人的车***！！！
+> [danger] 【学联提醒】*在任何情况下都不要上陌生人的车！！！*
 
 * **诈骗方式**： 线下诈骗
 * **诈骗团伙**： 欧洲当地的诈骗团伙
