--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -1,6 +1,6 @@
 :-: [![](.topwrite/assets/20171031_ACSSZ_Logo_01.png =390)](https://acssz.org/about/intro/)
 
-#### :-: **苏黎世新生文档2023**
+#### :-: **苏黎世留学指南**
 
 ^
 
@@ -22,5 +22,6 @@
 > [info] :-: **手册动态更新，欢迎持续关注**
 > 如有任何修改意见/建议，或想要参与编辑，欢迎联系我们
 > 邮箱地址：<info@acssz.org>
+> 同时，欢迎随时在群聊中分享相关经验
 
 ^
