Update 11行李准备.md, 24找房租房.md, 30出入境相关.md, 30学联服务.md, 31苏黎世消费与邮寄.md, 32医疗相关.md, 33心理咨询.md, 34证照相关.md, 36居住相关.md, 37其他相关事项.md, LostFound.md, SUMMARY.md, 对于Party扰民的应对.md, 意外受伤-生病时的应对.md Delete 31苏黎世消费.md, 34居留证的延期.md, 入境、过境、出境受阻时的应对.md, 护照/居留证遗失后的应对.md

--- a/31苏黎世消费与邮寄.md
+++ b/31苏黎世消费与邮寄.md
@@ -1,3 +1,5 @@
+> [success] 本章作者：凌晞、徐思婕
+
 #### **1. 月生活费**
 
 一般在1200-1500瑞左右。
@@ -47,3 +49,9 @@
 还有专门买肉的Carmelo’s Fleishshop和Fleisch Discount，肉种类很多，猪蹄鸡脚排骨都可以买到，并且价格优惠。
 
 ^
+#### **5. 邮寄**
+> [warning] 本章节后期考虑添加自国内向瑞士邮寄物品的相关内容，或使用外链形式。
+
+瑞士邮局是Die post，随处可见。普通包裹15-20天到国内，邮局有具体资费宣传页，可以去那里拿。邮寄10kg到国内差不多是80多瑞郎。如果在康斯坦茨买东西，往家里寄奶粉，礼物之类的东西，可以在康斯坦茨的DHL邮寄，费用会比瑞士邮局便宜些，10kg是60欧元左右。邮局都有打包材料可以买，纸箱子等并不贵，一个纸箱子约三四欧元，也可以跟药店等要。再省钱的方式就是可以在淘宝上买DHL包裹单，自己打印出来，到时候贴到箱子上直接交给DHL就可以，操作方法直接在淘宝上搜DHL包裹单就可以。Die post 和DHL一些包裹可以查到物流单号，具体可以查看官网和咨询邮局。
+
+<https://www.post.ch/de>
