--- a/32医疗相关.md
+++ b/32医疗相关.md
@@ -1,3 +1,12 @@
+> [success] 本章作者：徐思婕、陈小雨、陈雨航
+
+>[warning] 本章节内容需要更好地融合
+
+> [info] 【学联提醒】
+> * 普通伤病可在瑞各城市火车站医护中心治疗。危重病患需赴大医院救治。也可拨打医疗急救电话 144，或空中（雪山）救援电话1414，请求帮助。
+> * 如果病情或伤势较重，需要国内亲友来瑞陪伴，请联系中国使（领）馆，出示医院开具的医疗证明，以便使（领）馆通知您国内亲友，并协助办理相关手续。
+
+
 ### **1. 就医**
 
 详细信息可参考UZH制作的就医指南：:attachment[220502\_Health\_Issues\_information.pdf]{src=".topwrite/assets/220502_Health_Issues_information.pdf" size="286.64 kB"}
