--- a/37其他相关事项.md
+++ b/37其他相关事项.md
@@ -1,48 +1,29 @@
 #### **1. 驾照**
-
+> [warning] 本章节移动至[34 证照相关](<34证照相关.md>)部分
 ^
 
 #### **2. 垃圾分类**
-> [warning] 本章节后期可能移动至[36 居住相关](<36居住相关.md>)部分
-
-瑞士的垃圾分类比较严格，会有专门的工作人员检查垃圾是否分类正确。瑞士一般居民区周边都有不同的垃圾箱，分为纸、纸板、PET、金属和玻璃（玻璃需要根据不同颜色分类），其它垃圾必须放到Zürisack（20 CHF 左右10个一捆，可在超市或邮局向收营员购买）。若出现垃圾分类不合规，被查到后将面临罚款。
-关于其他垃圾回收的情况，请参照：
-<https://www.stadt-zuerich.ch/ted/de/index/entsorgung_recycling.html>
-
-> [danger] 锦涛修改建议：
->
-> 1. Zürisack不是放其它垃圾的，Zürisack**只能放**可燃垃圾，请进行修改，谢谢
->    \> ~~2. “据说”的信息就不要写了，避免以讹传讹。确实有人会检查垃圾，但不是警察，而是垃圾回收部门的工作人员> 3. 参考链接请修改为官方链接~~：<https://www.stadt-zuerich.ch/ted/de/index/entsorgung_recycling.html>
+> [warning] 本章节移动至[36 居住相关](<36居住相关.md>)部分
 
 ^
 
 #### **3. 邮寄**
 
-瑞士邮局是Die post，随处可见。普通包裹15-20天到国内，邮局有具体资费宣传页，可以去那里拿。邮寄10kg到国内差不多是80多瑞郎。如果在康斯坦茨买东西，往家里寄奶粉，礼物之类的东西，可以在康斯坦茨的DHL邮寄，费用会比瑞士邮局便宜些，10kg是60欧元左右。邮局都有打包材料可以买，纸箱子等并不贵，一个纸箱子约三四欧元，也可以跟药店等要。再省钱的方式就是可以在淘宝上买DHL包裹单，自己打印出来，到时候贴到箱子上直接交给DHL就可以，操作方法直接在淘宝上搜DHL包裹单就可以。Die post 和DHL一些包裹可以查到物流单号，具体可以查看官网和咨询邮局。
-
-<https://www.post.ch/de>
+> [warning] 本章节移动至[31 苏黎世的消费与邮寄](<31苏黎世的消费与邮寄.md>)部分
 
 ^
 
 #### **4. Lost & Found**
+> [warning] 本章节移动至[Lost & Found](<LostFound.md>)部分
 
-在**学校**丢了东西：直接到学校的lost & found柜台去找，UZH电话044 634 03 09。
-
-在**学校饭堂**丢了学生卡：到饭堂平时付款处去找；超过一周，到饭堂管理处去找。
-
-在**公交车**上丢了东西：到Fundbüro Stadt去找，044 412 25 50，地址ZürichWerdmühlestrasse 10, 8001 Zürich，8:00-18:30. 或者到Easyfind网站上去找：<https://www.easyfind.ch/default.aspx?Language=en>
-如情况较为紧急，也可以尝试向同一路其他班次的公交车司机请求协助，并提供丢失物品所在的车次信息（时间、行驶方向等），司机会互相交流确认车上是否有遗失物品
-
-在**火车**上丢了东西：第一时间去<https://www.sbb.ch/en/bahnhof-services/dienstleistungen/fundbuero.html> 提交遗失报告，然后后台会帮你找，并定期给你发信通知是否找到。
-
-**在外捡到东西**：拿到最近的Polizei警察办公室或lost and found办公室进行登记，或者也可以给SBB服务台上的售票员，留下地址电话和银行号，或许有Finder Rewards.
 
 ^
 
 #### **5. 奖助学金**
+> [warning] 本章节考虑移动至其他部分，或若其为本部分之唯一章节，考虑将本章节改名为”奖助学金“等，同时考虑极少量地添加关于助教方面的内容
 
-国际**硕士**研究生在完成第二个学期的修课拿到一定的学分后可以申请国际学生奖学金（<https://www.ethz.ch/students/en/studies/financial/scholarships/cost-of-living.html）>, 奖金数额往往比较可观，按照以往几年经验中国人申请到的几率非常之大；
-国际**本科生**在完成第一个学期的修课之后可申请Solidarity Fund for Foreign Students (<https://www.ethz.ch/students/en/studies/financial/solidarity-fund.html>)。
+- 国际**硕士**研究生在完成第二个学期的修课拿到一定的学分后可以申请国际学生奖学金（<https://www.ethz.ch/students/en/studies/financial/scholarships/cost-of-living.html）>, 奖金数额往往比较可观，按照以往几年经验中国人申请到的几率非常之大；
+- 国际**本科生**在完成第一个学期的修课之后可申请Solidarity Fund for Foreign Students (<https://www.ethz.ch/students/en/studies/financial/solidarity-fund.html>)。
 
 > [danger] 锦涛修改建议：
 >
