--- a/防诈反诈.md
+++ b/防诈反诈.md
@@ -34,7 +34,7 @@
 * **诈骗团伙**： 中国台湾、缅甸、柬埔寨等地的诈骗团伙
 * **案例**：
   【第一阶段】张三同学接到+86 10 96110来电，对方自称“广州反诈中心”，在向张三科普了一些反诈知识和后，称张三名下有一张在北京大兴国际机场的中国移动营业厅办理的电话卡涉嫌违法犯罪。在张三否认办理过该张电话卡后，“广州反诈中心”表示张三的身份被不法分子冒用，要求张三报案，并替张三将电话转接到“北京市公安局大兴分局刑侦支队”。期间，张三对“广州反诈中心”使用+86 10的区号提出质疑，“广州反诈中心”表示这是由于向境外呼叫而使用的统一号码，张三遂相信之。
-  【第二个平行时空的第一阶段】张三同学接到“中国驻瑞士使馆”/“中国驻苏黎世总领馆”/“DHL客服中心”（下简称“来电方”）来电，称张三因向国内寄送的包裹被查出含有违禁品而涉嫌违法。在张三否认寄送过该包裹后，来电方表示张三的身份被不法分子冒用，要求张三报案，并替张三将电话转接到“北京市公安局大兴分局刑侦支队”。期间，张三对“广州反诈中心”使用+86 10的区号提出质疑，“广州反诈中心”表示这是由于向境外呼叫而使用的统一号码，张三遂相信之。
+  【第二个平行时空的第一阶段】张三同学接到“中国驻瑞士使馆”/“中国驻苏黎世总领馆”/“DHL客服中心”（下简称“来电方”）来电，称张三因向国内寄送的包裹被查出含有违禁品而涉嫌违法。在张三否认寄送过该包裹后，来电方表示张三的身份被不法分子冒用，要求张三报案，并替张三将电话转接到“北京市公安局大兴分局刑侦支队”。
   【第二阶段】电话转接后，一位“王警官”为张三通过Skype进行了笔录，并出具了《报案事件接报回执单》。![](.topwrite/assets/1689117820062.png)
   期间，张三对公安部门使用Skype软件办案提出质疑，“王警官”表示该举措是为了方便海外群众配合调查。随后，“王警官”提出要帮助张三查询一下张三是否有其他身份被冒用的情况，要求张三提供身份证号，张三接受，“王警官”便呼叫“总部”查询。后“总部”回话称有一张张三名下的银行卡涉嫌巨额洗钱，要求张三立刻配合调查。
   【第三阶段】
