Update 24找房租房.md, 30出入境相关.md, 31苏黎世消费与邮寄.md, 34证照相关.md

--- a/24找房租房.md
+++ b/24找房租房.md
@@ -1,3 +1,9 @@
+---
+title: 苏黎世找房攻略
+keywords: 苏黎世 找房 租房 住房
+description: 苏黎世学联编写的《苏黎世留学指南》找房篇
+---
+
 > [success] 本篇贡献：徐思婕、杨锦涛、赵逸飞
 
 > [warning] // TO BE ADDED: Betreibungsauszug
