--- a/34证照相关.md
+++ b/34证照相关.md
@@ -93,8 +93,6 @@
 ### **3. 护照的换发和补发（护照遗失处理流程）&#x20;**
 > [info] *以下内容仅适用于中华人民共和国普通护照。如持有外交护照、公务（普通）护照等的，请咨询对应使领馆；持有香港特别行政区或澳门特别行政区护照的，请参考[《港澳台同胞申办证件须知》](<http://zurich.china-consulate.gov.cn/lsfw/hzlxz/201807/t20180713_4205846.htm>)。*
 
-> [warning] 本章节内容根据总领馆通知有所修改（主要为”因护照遗失/被盗补办护照是否需要警局开具的报失单“一项），同时关于”护照遗失时是否需要报警“之内容亦需要进一步核实。为确保内容准确无误，将请总领馆阅读检查。
-
 一般，满足以下情况之一者需要办理**护照换发**：
 - 护照已过期或剩余有效期不足一年的
 - 空白签证页少于4页的
@@ -106,7 +104,7 @@
 
 满足以下情况之一者需要办理**护照补发**：
 - 护照遗失或被盗的
-*对于该类情况，在办理护照补发前应立即到当地警察局**报警备案**，并保存好报失单。报失单上至少应列明报失人姓名和遗失物品名称。*
+*对于该类情况，在办理护照补发前应立即到当地警察局**报警备案**，并保存好受案回执，其上至少应列明报失人姓名和遗失物品名称。*
 - 护照因故损毁的（如误放进洗衣机）
 
 对于无紧急回国需求的，护照补发一般在国外办理。对于需要紧急回国的，可（应）向中国驻当地使领馆申办旅行证，凭旅行证回国后再前往公安机关办理护照补发。
