--- a/30出入境相关.md
+++ b/30出入境相关.md
@@ -1,6 +1,17 @@
 > [success] 本章作者：陈雨航
 
 > [warning] 本章节编写尚未完成
-#### **X. 出/入/过境受阻的应对**
+
+> [info] 【学联提醒】
+> * *原则上，对于中国公民，进出瑞士国境（尤其是通过航空或公路口岸出入境的）必须同时持有瑞士居留证（或有效瑞士签证）和中国护照才能证明身份。即使瑞士边检有时并不对此进行查验，我们亦不建议抱有任何侥幸心理*。
+> * *出行前应准备好护照复印件和居留证复印件并随身携带*。
+> * *可提前将护照资料页，居留证/身份证，机票行程单，宾馆订单等旅行文件的电子版/扫描版备份在自己的电子邮箱中，即使遇到原件及打印件丢失情况亦可证明身份及行程*。
+> * *无论发生任何情况，均应保持冷静镇定以妥善处理问题。*
+
+#### **1. 中国护照配合申根D类签证/居留证的效力**
+
+#### **2. 转机过境/入境相关**
+
+#### **3. 出/入/过境时受阻的应对**
 * 如果您持有效护照、签证，请向边境检查部门说明情况，询问受阻原因。如果您语言不通，可要求对方提供翻译服务。
 * 如果您的合理要求未得到回应，请与中国使（领）馆联系。领事官员将向有关部门了解情况，并进行必要交涉。能否放行取决于实际情况。如果您受到不公正对待，请注意收集、保存证据，以便日后诉诸法律。
