Update 00欢迎页.md, 02落地事项.md, 04结语&学联服务.md, 10申请签证.md, 10行李丢失处理.md, 12国内手机及电话卡.md, 12国内银行卡.md, 13赴瑞机票.md, 15新生材料c-o寄存.md, 21交通票.md, 22prepaid电话卡.md, 24找房租房.md, 25住址申报（“户口”）.md, 26瑞士银行卡.md, 27保险及豁免.md, 28居留证的首次办理.md, 36居住相关.md, ETH相关.md, LostFound.md, SUMMARY.md, UZH相关.md Delete 04结束.md, 05提问.md, 11国内手机号.md, 28居留证的办理.md, 30学联服务.md, 99鸣谢.md

--- a/02落地事项.md
+++ b/02落地事项.md
@@ -1,6 +1,6 @@
 > [success] 如需要接机服务，请在[学联论坛2023接机供求贴](https://forum.acssz.org/d/950)内发布需求，或直接联系帖子中提供接机的同学。
 
-#### **落地后需办理的所有事项**：
+#### **落地后需办理事项一览**
 
 （按时间先后顺序）
 
