--- a/10行李丢失处理.md
+++ b/10行李丢失处理.md
@@ -1,3 +1,5 @@
+> [success] 本章作者：徐思婕
+
 * **出发前**在行李上做好明显标记（如系彩色丝带等），并在行李牌上写清楚自己的名字、邮箱等联系方式
 * **落地后**，在行李转盘寻找后确定没有找到自己的行李，及时联系机场工作人员。机场工作人员会带你去行李丢失处寻找，那里有很多没人认领的箱子
 * 如果在行李丢失处没有找到箱子，直接联系机场工作人员告知你的情况。他们会询问你丢失箱子的相关信息，一定要尽可能详细地告诉他们行李箱的模样（如：颜色、材质、尺寸、标记等）。登记完成后，工作人员会让你留下**联系方式**和**住宿地址**。
