--- a/28居留证的首次办理.md
+++ b/28居留证的首次办理.md
@@ -1,4 +1,6 @@
-> [info] *本章节仅介绍新迁入人员首次办理居留证的流程，关于居留证的临期换发请参考*[34 居留证的延期](34居留证的延期.md)。
+> [success] 本章作者：张堃、陈雨航、赵逸飞
+
+> [warning] *本章节仅介绍新迁入人员首次办理居留证的流程，关于居留证的临期换发和遗失补发请参考生活篇的[34 证照相关](<34证照相关.md>)章节*。
 
 #### **1. 前往移民局办理居留证**
 
