--- a/00欢迎页.md
+++ b/00欢迎页.md
@@ -1,6 +1,6 @@
 :-: [![](.topwrite/assets/20171031_ACSSZ_Logo_01.png =390)](https://acssz.org/about/intro/)
 
-#### :-: **苏黎世留学指南**
+### :-: **苏黎世留学指南**
 
 ^
 
@@ -14,7 +14,7 @@
 
 > [warning] :-: 根据[《中华人民共和国著作权法》](http://www.npc.gov.cn/npc/c30834/202011/848e73f58d4e4c5b82f69d25d46048c6.shtml#)第八条与第十四条
 > 本文档著作权由内容贡献者共同享有，并由苏黎世学联协调管理
-> **未经苏黎世学联授权，禁止任何形式转载**
+> **未经苏黎世学联授权，严禁以任何形式转载，违者必究**
 
 > [success] :-: 2023年4月29日新生在线答疑会回放[请点击此](https://www.bilibili.com/video/BV18m4y1176R/?share_source=copy_web\&vd_source=802461966f51c0cf1ab48c9114efb719)
 > （部分内容有所变动，请以本手册为准）
