--- a/12国内手机及电话卡.md
+++ b/12国内手机及电话卡.md
@@ -1,14 +1,17 @@
-如果需要，请同学们**提前设置最低月费保号套餐**和**开通国际漫游以便于在瑞士接收短信**。
+> [success] 本章作者：李圆
 
-^
+> [warning] *本章节仅介绍国内设备和SIM卡在国外的使用，关于瑞士本地SIM卡请参考[22 瑞士电话卡](<22prepaid电话卡.md>)章节。*
 
-#### **1. 最低月费保号**
+> [info] 【学联提醒】*为确保在瑞士亦可接发短信及接打电话，建议**提前设置最低月费保号套餐并开通国际漫游**。*
 
-目前三大运营商最低的月租套餐是：
+#### **1. 最低月费保号套餐**
 
-* 移动保号套餐是8元套餐分语音版和流量版（部分地区只有8元飞享套餐不包括通话流量）
-* 联通保号套餐是联通8元流量王套餐&#x20;
-* 电信保号套餐是电信无忧卡5元
+目前，国内三大运营商最低的月租套餐是：
+
+* 中国移动：8元套餐
+*分为语音版和流量版，部分地区只有不包括通话流量的8元飞享套餐*
+* 中国联通：联通8元流量王
+* 中国电信：电信5元无忧卡
 
 想改保号套餐的可直接关注移动/电信/联通官方公众号，找到人工客服（也可公众号直接打字人工客服发送）要求更改对应套餐。
 
@@ -22,23 +25,16 @@
 
 三大运营商漫游业务均至瑞士，开通国际漫游业务可通过人工客服或者点击相关公众号服务开通，具体资费情况（如电话，短信，流量，日收费上限等）可查看官方公众号及网页。
 
-* 电信：
-
-漫游公众号：中国电信国际及港澳台漫游（开通漫游，流量包办理，资费查询等）
-
-境外国漫服务专线：+86 18918910000
-
-* 移动：
-
+* 中国移动（境外国漫服务专线：+86 138 0010 0186  或 +86 10086）：
 漫游公众号：中国移动国际漫游（开通漫游，多种流量及长途业务办理，业务资费等）
 
-境外国漫服务专线：+86 13800100186  或 +86 10086
-
-* 联通：
-
+* 中国联通：
 漫游公众号：中国联通（点击链接到网上营业厅，左侧栏国际漫游）
-
 境外国漫服务专线：+86 18618610010
+
+* 中国电信：
+漫游公众号：中国电信国际及港澳台漫游（开通漫游，流量包办理，资费查询等）
+境外国漫服务专线：+86 18918910000
 
 ^
 
