--- a/24找房租房.md
+++ b/24找房租房.md
@@ -4,7 +4,7 @@ keywords: 苏黎世 找房 租房 住房
 description: 苏黎世学联编写的《苏黎世留学指南》找房篇
 ---
 
-> [success] 本篇贡献：徐思婕、杨锦涛、赵逸飞
+> [success] 本章作者：徐思婕、杨锦涛、赵逸飞
 
 > [warning] // TO BE ADDED: Betreibungsauszug
 
