--- a/24找房租房.md
+++ b/24找房租房.md
@@ -115,7 +115,7 @@ Alex将在微信账户的**朋友圈**中发布所有可租的房间。每个房
 
 1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室申报住址）
 2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要付费承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手家具（微信群、本地二手平台、Facebook等，可直接谷歌搜索**second hand furniture zurich**），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要因为没有家具被劝退，自己置办家具也是不错的选择
-3. 如果是私人房东，则尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。如果是不动产管理公司（如livit）/正规中介公司（如intermezzo）/大型住房合作社（如WOKO），则有可能线上签合同
+3. 如果是私人房东，则尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。如果是不动产管理公司（如Livit）/正规中介公司（如Intermezzo）/大型住房合作社（如WOKO，JUWO，WFSS），则有可能线上签合同
 4. 签完合同后，房东或物业管理员应该和你一同确认房间现有破损状况，记录在检查单上，并由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
 5. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
 6. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
