--- a/找房租房.md
+++ b/找房租房.md
@@ -1,63 +1,53 @@
 > [success] 本章作者：任逍遥、杨晨宇、杨锦涛、徐思婕、赵逸飞和张家萌、陈庆瑄、彭雅莹、岳妮
 
-
 > [success] 特别鸣谢：张家萌、陈庆瑄、彭雅莹、岳妮
-
 
 >[danger] **本章节维护中**
 
-
 > [info] *本章节合并了先前的”云找房“和”找房租房“章节。*
 
-
 > [warning]【学联提醒】*找房前，欢迎查看学联论坛[租房避雷贴](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)。*
-
 
 ### **1. 瑞士找房步骤和租房流程介绍**
 > [danger] 【学联提醒】***经典骗钱套路**是在你还没到瑞士前，请你转所谓的* *~~定金（Security deposit~~*） *给他，收到定金后他为你预订保留房间和合同。事实上，瑞士的正规租房程序**没有“定金”的说法***，*不需要提前交定金*！
 > ***要求提前交钱的都不要信***！*类似这种可疑情况都不要转账*！
 
-
 > [info] 【学联提醒】*Debit储蓄卡可以正式汇款转账，但Prepaid/Credit卡不行。请避免将大量金额一次性充入Prepaid/Credit卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易*。
 
-
 #### **1.1 关于租房合同和看房**
-
 
 租房合同一般为**德语**，因为德语合同在瑞士才具备法律效力。如果是英语合同，请一定要小心谨慎，很有可能是骗子），签完合同后安排看房，房东和你一起完成《房间现状记录表》，完成记录后房东将钥匙交给你。
 **在拿到钥匙打开房门那一刻之前，不要交任何的钱**（企业、中介及合作社的房源，如Livit，Intermezzo，WOKO，JUWO，WFSS房源等可酌情在拿到钥匙前交部分费用如押金，私人房东一定不要提前交钱）
 
-
 #### **1.2 关于押金**
-
 
 * 一般情况下，在签完合同后，房产公司会为你开设一个在你名下的**银行押金账户**，开设该账户需要你签字授权，你交的押金将存放在该账户。**你的押金不应该放在房东私人或房产公司的账户里**。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
 * 或者，在签完合同后，你也有可能是去签署一份**押金保险**（Mieterkautionsversicherung）并缴纳押金
 
-
 #### **1.3 关于租金缴纳**
-
 
 你的**租金应该对公转账**，通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产中介公司或私人产权所有者）账户
 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款给房东”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的租客间资金往来纠纷
 
-
-
-
 ^
 ### **2. 租房时需要考虑的因素**
-#### **2.1 租房合同**
-#### **2.2 房源地点**
-#### **2.3 房型**
-#### **2.4 家具情况**
 
+#### **2.1 租房合同**
+
+#### **2.2 房源地点**
+
+#### **2.3 房型**
+
+#### **2.4 家具情况**
 
 ^
 
-
 ### **3. 瑞士常用租房渠道汇总**
+
 #### **3.1 瑞士常用租房渠道一览**
+
 #### **3.2 ETH&UZH联办租房平台**
+
 > [info] *该渠道既适用于在苏黎世找房的同学，也适用于在国内远程找房的同学；且回复速度和申请成功率较高。*
 ##### **3.1.1 注册和租房步骤**
 【第一步】打开[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)并注册。在注册界面的“I am”栏，
@@ -69,10 +59,11 @@
 
 
 【第二步】登录该平台并在筛选器中选择”show all adverts“，此时将列出现时所有可用房源。
-部分房源对申请人有年龄和/或身份限制，此项在房源描述部分可见。
+![](.topwrite/assets/1690466655731.png)
+*部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供UZH的2023年秋季学期硕士新生申请。*
 3\) 点进Housing Office与woko合作的房源；
 4\) 如何在[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)识别woko房源：550-770 CHF/月（近期价格有上调）；Type: shared apartment；Available from: 秋季学期的9月1日（春季待补充）；点进去Email为housing\@ethz.ch；
-5\) 在description看清楚是ETH的房源还是UZH的房源，比如’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“是只有UZH学生才能申请的房子；
+
 6\) 给housing\@ethz.ch发邮件：需写清房子的编号，表明自己的身份，最好在邮件中写自己的生日并附件学校的录取通知书，省下被追问的时间。Housing Office回复十分迅速，如果有房源一般在半天内就会发来带有link的邮件，填完link后要及时回复邮件”I registered“，半小时左右后会收到房子的offer；
 7\) 可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
 
