--- a/找房租房.md
+++ b/找房租房.md
@@ -64,11 +64,13 @@
 ➢ 可用时间为自9月1日起
 ➢ 联系方式为<housing@ethz.ch>
 
-其中，前者的租房具体流程与社会渠道无异，具体以房东要求为准。本章节主要介绍后者的租房流程。
+其中，前者的租房具体流程与社会渠道无异，具体以房东要求为准。**本章节主要介绍后者的租房流程。**
+此外，部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供28岁以下的2023年秋季学期UZH硕士新生申请，请仔细甄别。
 
-部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供UZH的2023年秋季学期硕士新生申请。
-
-【第三步】给housing\@ethz.ch发邮件：需写清房子的编号，表明自己的身份，最好在邮件中写自己的生日并附件学校的录取通知书，省下被追问的时间。Housing Office回复十分迅速，如果有房源一般在半天内就会发来带有link的邮件，填完link后要及时回复邮件”I registered“，半小时左右后会收到房子的offer；
+【第三步】在该平台找到心仪的WOKO房源后，通过邮件（<housing@ethz.ch>）发送租房申请，邮件中须包含：
+- 房源编号
+- 申请人身份
+此外，最好在邮件中表明申请人的出生日期并将录取通知书作为附件上传以避免被追问。*Housing Office回复十分迅速，如果有房源一般在半天内就会发来带有link的邮件，填完link后要及时回复邮件”I registered“，半小时左右后会收到房子的offer；
 7\) 可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
 
 
