--- a/找房租房.md
+++ b/找房租房.md
@@ -49,7 +49,8 @@
 #### **3.2 ETH&UZH联办租房平台**
 
 > [info] *该渠道既适用于在苏黎世找房的同学，也适用于在国内远程找房的同学；且回复速度和申请成功率较高。*
-##### **3.1.1 注册和租房步骤**
+##### **3.2.1 平台介绍**
+##### **3.2.2 注册和租房步骤**
 【第一步】打开[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)并注册。在注册界面的“I am”栏，
 - 新生应选择”Incoming student“
 - 老生应选择”Student“
@@ -64,20 +65,22 @@
 ➢ 可用时间为自9月1日起
 ➢ 联系方式为<housing@ethz.ch>
 
-其中，前者的租房具体流程与社会渠道无异，具体以房东要求为准。**本章节主要介绍后者的租房流程。**
-此外，部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供28岁以下的2023年秋季学期UZH硕士新生申请，请仔细甄别。
+其中，前者的租房具体流程与社会渠道无异，具体以房东要求为准。**本章节主要介绍后者的租房流程。** 此外，部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供28岁以下的2023年秋季学期UZH硕士新生申请，请仔细甄别。
+可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
 
 【第三步】在该平台找到心仪的WOKO房源后，通过邮件（<housing@ethz.ch>）发送租房申请，邮件中须包含：
 - 房源编号
 - 申请人身份
-此外，最好在邮件中表明申请人的出生日期并将录取通知书作为附件上传以避免被追问。*Housing Office回复十分迅速，如果有房源一般在半天内就会发来带有link的邮件，填完link后要及时回复邮件”I registered“，半小时左右后会收到房子的offer；
-7\) 可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
+
+此外，最好在邮件中表明申请人的出生日期并将录取通知书作为附件上传以避免被追问。
+一般，Housing Office回复十分迅速。若房源可用，半天内即可收到带有房源注册表格链接的邮件，此时需要填写并提交该表格，并及时回复邮件告知Housing Office已注册。注册后约半小时即可收到房子的offer。
+若在瑞士工作时间发送租房申请邮件，但3个小时内未收到Housing Office回复的，或填完并回复邮件后超过一个小时没收到offer，建议检查垃圾邮件。如果垃圾邮件也没有，说明邮件太多你的消息可能被遗漏，可酌情再发邮件追问；
 
 
 1\) UZH房源较少，上架后最多2天就会抢完，晚申请可能会进入wating list。可提前与Housing Office联系，询问什么时候上新房源，并在上架时间不停刷新网页；
 2\) 点击No一栏可以让编号按时间排序，直接在最后几行看新上的房源；
 3\) 年龄超过28岁的也可以给<housing@ethz.ch>发邮件，将可能收到woko其它地方价格稍贵的房子的offer，比28岁以下贵100-200CHF；
-4\) 如果瑞士工作时间发邮件没有在3个小时内收到Housing Office回信，或填完link并回复邮件后超过一个小时没收到offer，建议检查垃圾邮件。如果垃圾邮件也没有，说明邮件太多你的消息可能被遗漏，可酌情再发邮件追问；
+4\) 
 5\) 根据大家的分享，ETH给的都是半年，UZH大部分给的都是一年。理论上不可以转租；
 6\) 每个人有且只有一次向Housing Office申请宿舍的机会（属于是开盲盒）。Housing Office会随机分发有空的房子，有可能不是你希望申请的那一套。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
 7\) 秋季入学的新生，建议4、5月即可开始找房，7、8、9月苏黎世逐渐进入找房高峰。如在来前能找到心仪长租房，皆大欢喜。否则建议退而求其次采用备选方案，暂且放弃价格，舒适度，地段，便利程度等某个要求，先找个房住下注册好，至少有个落脚点，之后在漫漫求学过程中再换房。如果一直观望，则可能导致最后扑空，因而不得不连续住几个月酒店，其性价比往往更低。本条建议仅供参考。
