--- a/找房租房.md
+++ b/找房租房.md
@@ -7,12 +7,18 @@
 > [info] *本章节合并了先前的”云找房“和”找房租房“章节。*
 
 > [warning]【学联提醒】*找房前，欢迎查看学联论坛[租房避雷贴](https://forum.acssz.org/d/794-zu-fang-bi-lei-tie)。*
+> 7\) 秋季入学的新生，建议4、5月即可开始找房，7、8、9月苏黎世逐渐进入找房高峰。如在来前能找到心仪长租房，皆大欢喜。否则建议退而求其次采用备选方案，暂且放弃价格，舒适度，地段，便利程度等某个要求，先找个房住下注册好，至少有个落脚点，之后在漫漫求学过程中再换房。如果一直观望，则可能导致最后扑空，因而不得不连续住几个月酒店，其性价比往往更低。本条建议仅供参考。
 
 ### **1. 瑞士找房步骤和租房流程介绍**
 > [danger] 【学联提醒】***经典骗钱套路**是在你还没到瑞士前，请你转所谓的* *~~定金（Security deposit~~*） *给他，收到定金后他为你预订保留房间和合同。事实上，瑞士的正规租房程序**没有“定金”的说法***，*不需要提前交定金*！
 > ***要求提前交钱的都不要信***！*类似这种可疑情况都不要转账*！
 
 > [info] 【学联提醒】*Debit储蓄卡可以正式汇款转账，但Prepaid/Credit卡不行。请避免将大量金额一次性充入Prepaid/Credit卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易*。
+
+1. 七月到十一月为找房旺季，请尽早开始，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子
+2. 发邮件，可以写一个cover letter介绍自己，比如经历、爱好、**生活习惯（爱干净，安静**），不用写得太长，努力争取线下看房机会。邮件海投数量从十封到上百封都有可能。如果长时间没有收到回复也不要气馁，请坚持投下去。woko、juwo这类机构房源则是填表，等待对方审核和联系
+3. 如获得机会看房并对房子满意，则签写租房**意向表**（注意不是合同）。建议线下看房的时候多和房东/中介聊天争取好感，从众多看房者中脱颖而出，房东/中介才可能把房子租给你。房子租给谁基本全凭房东/中介主观感觉，偶尔会有房子是按照先到先得的顺序给的
+4. 等待房东/中介回复
 
 #### **1.1 关于租房合同和看房**
 
@@ -31,323 +37,13 @@
 
 ^
 ### **2. 租房时需要考虑的因素**
-
-#### **2.1 租房合同**
-
-#### **2.2 房源地点**
-
-#### **2.3 房型**
-
-#### **2.4 家具情况**
-
-^
-
-### **3. 瑞士常用租房渠道汇总**
-
-#### **3.1 瑞士常用租房渠道一览**
-
-#### **3.2 ETH&UZH联办租房平台**
-
-> [info] *该渠道既适用于在苏黎世找房的同学，也适用于在国内远程找房的同学；且回复速度和申请成功率较高。*
-##### **3.2.1 平台介绍**
-##### **3.2.2 注册和租房步骤**
-【第一步】打开[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)并注册。在注册界面的“I am”栏，
-- 新生应选择”Incoming student“
-- 老生应选择”Student“
-
-提交约1天后会收到注册成功邮件。
-
-【第二步】登录该平台并在筛选器中选择”show all adverts“，此时将列出现时所有可用房源，其中主要包含：
-- 私人房东上传的房源
-- WOKO房源，其一般有以下特征：
-➢ 租金为550-770 CHF/月（近期价格有上调）
-➢ 房源类别为”shared apartment“
-➢ 可用时间为自9月1日起
-➢ 联系方式为<housing@ethz.ch>
-
-其中，前者的租房具体流程与社会渠道无异，具体以房东要求为准。**本章节主要介绍后者的租房流程。** 此外，部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供28岁以下的2023年秋季学期UZH硕士新生申请，请仔细甄别。
-可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
-
-【第三步】在该平台找到心仪的WOKO房源后，通过邮件（<housing@ethz.ch>）发送租房申请，邮件中须包含：
-- 房源编号
-- 申请人身份
-
-此外，最好在邮件中表明申请人的出生日期并将录取通知书作为附件上传以避免被追问。
-一般，Housing Office回复十分迅速。若房源可用，半天内即可收到带有房源注册表格链接的邮件，此时需要填写并提交该表格，并及时回复邮件告知Housing Office已注册。注册后约半小时即可收到房子的offer。
-若在瑞士工作时间发送租房申请邮件，但3个小时内未收到Housing Office回复的，或填完并回复邮件后超过一个小时没收到offer，建议检查垃圾邮件。如果垃圾邮件也没有，说明邮件太多你的消息可能被遗漏，可酌情再发邮件追问；
-
-
-1\) UZH房源较少，上架后最多2天就会抢完，晚申请可能会进入wating list。可提前与Housing Office联系，询问什么时候上新房源，并在上架时间不停刷新网页；
-2\) 点击No一栏可以让编号按时间排序，直接在最后几行看新上的房源；
-3\) 年龄超过28岁的也可以给<housing@ethz.ch>发邮件，将可能收到woko其它地方价格稍贵的房子的offer，比28岁以下贵100-200CHF；
-4\) 
-5\) 根据大家的分享，ETH给的都是半年，UZH大部分给的都是一年。理论上不可以转租；
-6\) 每个人有且只有一次向Housing Office申请宿舍的机会（属于是开盲盒）。Housing Office会随机分发有空的房子，有可能不是你希望申请的那一套。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
-7\) 秋季入学的新生，建议4、5月即可开始找房，7、8、9月苏黎世逐渐进入找房高峰。如在来前能找到心仪长租房，皆大欢喜。否则建议退而求其次采用备选方案，暂且放弃价格，舒适度，地段，便利程度等某个要求，先找个房住下注册好，至少有个落脚点，之后在漫漫求学过程中再换房。如果一直观望，则可能导致最后扑空，因而不得不连续住几个月酒店，其性价比往往更低。本条建议仅供参考。
-
-
-#### **3.2 学联伙伴Intermezzo租房中介公司**
-> [info] *该渠道既适用于在苏黎世找房的同学，也适用于在国内远程找房的同学。*
-##### **3.2.1 Intermezzo租房中介公司及其房源介绍**
-Intermezzo是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司，也是学联的合作伙伴。其提供的住房：
-- 地点：主要位于苏黎世市区，距离ETH/UZH主校、ZHAW、Oerlikon、Irchel、ETH Hönggerberg均较近；
-- 房型：包括但不限于
-➢ 单人的”2.5房“公寓（Studio）
-➢ 3-4人合租的”4.5房“公寓
-➢ 8人以上合租的独栋湖景别墅
-- 价格：
-➢ 租金**每月650.00-1200.00瑞士法郎不等**，包含水、电、网、暖等费用
-➢ 押二付一，先住后付，不需提前支付任何费用
-- 起租时间：除非另行说明，Intermezzo房源的起租时间一般为 **”自发布之时可用“**
-- 合同期限：
-➢ 灵活终止合同
-➢ **仅提供有固定租期限制的公寓，不提供无限可续的公寓**
-- 设施：提供基本家具（一般为每间房一张床、一张床垫、一把椅子、一张桌子、一盏台灯和一个壁橱）和厨房设备（洗碗机、烤箱、锅碗瓢盆），且有公用洗衣房。
-
-
-##### **3.2.2 申请租房流程**
-**申请流程**：确定需求；填写申请表；签署合同；入住对接；押租金。
-【第〇步】**请进入Intermezzo2023Fall微信群并认真阅读群公告**。由于该群已达200人，请添加学联杨同学微信，以便其邀请你进群:
-![](.topwrite/assets/yangcyself.png =250)
-进群后即可添加Intermezzo员工Alex的微信（请务必**使用德语或英语与Alex联系**）。Alex将在其**朋友圈**中发布所有可供出租的房源。有时，Alex也会在群中分享可供出租的房源。每个房源的**申请表格链接**都在其所对应朋友圈的**评论**部分。如果申请表不可见，则代表该房源目前已被预订/租出。
-【第一步】如找到中意房源的，请在通过微信告知Alex你的姓名（拼音），并将填妥的租房申请表格发回。
-> [warning] 【学联提醒】
-> - 除非另行说明，申请表格上的”起租时间“**必须在提交申请后两周以内**，因此勿向Intermezzo发送远期（如1个月以上）租房申请。
-> - 如房源为多人合租的，可选择与朋友共同申请整套房源，亦可单独申请其中的一个房间。
-
-
-【第二步】等待Alex的回复。一般，Intermezzo的房源分配遵循先到先得原则。
-如Alex告知已将申请表转发给其同事以准备合同，该申请即成功。**此时如取消合同，会进入黑名单（即无法再通过该渠道找房）或需要缴纳50瑞郎的罚金。**
-如Alex告知该房已出租，则返回第一步。
-【第三步】签署合同、安排房屋交接（见前文）
-
-
-- 优点
-➢ 价格相对优惠
-➢ 沟通更加方便
-➢ 有基本家具
-- 缺点
-
-
-
-
-*
-#### **3.3 其他学生专用租房渠道**
-> [info] *该渠道主要适用于在苏黎世找房的同学。*
-#### **3.4 社会租房渠道**
-> [info] *该渠道主要适用于在苏黎世找房的同学。*
-
-
-^
-
-
-### **3. ”注册地址“相关**
-
-
-^
-### **4. 未找到房时的在瑞临时安顿**
-* 酒店：酒店比较昂贵，一般只适用于极短期（一周内）
-* 民宿/青旅：价格相对合理，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼
-
-
-> 有些民宿或青旅居住时长超过1个月会签租房合同（提前与店家确认），可以拿这个合同去人口登记办公室申报住址
->
-> 如确实找不到房，建议**最晚在八月中旬**预定好民宿/青旅，否则之后即便是民宿和青旅也一房难求
-
-
-* 学长学姐/朋友家
-* 群里的短租：自行甄别筛选
-
-
-————————————————————————————————————
-
-
-
-
-[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)
-ETH\&UZH联办租房平台的，具体如何操作请见**以下步骤**：
-
-
-##### **2.1.1 申请操作步骤**
-
-
-
-
-
-
-##### **2.2.2 注意事项**
-
-
-
-
-
-
-^
-
-
-#### **2.2 其他瑞士常用学生租房渠道**
-
-
-* [Student Village](https://studentvillage.ch/) & [Living Sceinece](https://www.livingscience.ch/wohnen-studieren-zuerich/?id=\&L=1)：有基本家具，拎包入住（仅限ETH学生）
-  *一般不太可能通过SV和LS官网找到房，而是通过*[Facebook群组](https://www.facebook.com/groups/svzurich/)*和微信群。微信群名为“SV的宝宝们”，长期500人满员，可以联系在群中的朋友在有空位时将你拉入*。
-* [wfs - wohnräume für studierende](https://www.wfss.ch/) Living spaces for students&#x20;
-* [学生WOKO](https://www.woko.ch/)：有基本家具，拎包入住。博士年收入超过26400CHF的，每月要多交100CHF
-* [学生JUWO](https://www.juwo.ch/)：没有家具。年龄限制在16-28岁间，年收入不能超过30000CHF
-* [Students](http://www.students.ch/wohnen/list)
-* [学联论坛](https://forum.acssz.org/)：请自行甄别信息真实性，学联对任何租房信息都没有担保责任或义务
-* 学生微信群聊：新生群、学联活动群、二手群、租房群、搬家群等
-
-
-^
-
-
-#### **2.3 学联伙伴Intermezzo租房公司**
-
-
-此外，你还可以通过**学联合作伙伴Intermezzo租房公司**云找房，
-
-
-^
-
-
-#### **2.4 其他渠道**
-
-
-除此外，以下网站可尝试云找房，但多数情况下是需要现场看房的：
-
-
-* [WG Zimmer ](https://www.wgzimmer.ch/home.html)
-  （WG是德语Wohngemeinschaft的缩写，英语译为shared apartment，中文译为合用公寓）
-* [Flatfox](https://flatfox.ch/c/en/)
-  （可能比较偏好可以线下看房的客户，并且用德语申请的话也许回复率较高）
-* [comparis](https://en.comparis.ch/immobilien/search)
-* [RON ORP](http://www.ronorp.net/zuerich/dach-ueber-dem-kopf)
-* [Homegate](https://www.homegate.ch/en)
-* [WG-Gesucht](https://www.wg-gesucht.de/)
-* [Room Estate](https://roomestate.com/)
-  （房源大多可以查看在住人信息，并且可以在线预定租赁，但是真实体验未知）
-
-
-^
-
-
-
-
-### **2**. **找房步骤**
-
-
-1. 七月到十一月为找房旺季，请尽早开始，结合自身情况考虑房租、通勤、交通费等因素，筛选适合自己的房子
-2. 发邮件，可以写一个cover letter介绍自己，比如经历、爱好、**生活习惯（爱干净，安静**），不用写得太长，努力争取线下看房机会。邮件海投数量从十封到上百封都有可能。如果长时间没有收到回复也不要气馁，请坚持投下去。woko、juwo这类机构房源则是填表，等待对方审核和联系
-3. 如获得机会看房并对房子满意，则签写租房**意向表**（注意不是合同）。建议线下看房的时候多和房东/中介聊天争取好感，从众多看房者中脱颖而出，房东/中介才可能把房子租给你。房子租给谁基本全凭房东/中介主观感觉，偶尔会有房子是按照先到先得的顺序给的
-4. 等待房东/中介回复
-
-
-^
-
-
-### **3**. **找房渠道**
-
-
-在找房之前，请查看租房避雷贴：<https://forum.acssz.org/d/794-zu-fang-bi-lei-tie>
-
-
-#### **常见渠道**
-
-
-| 途径/渠道                                                                                                                             | 简介                                                                                                                                                                                                                 | 优点                                                                                                                 | 缺点                                                                                                      |
-| --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------- |
-| [Housing Office](https://wohnen.ethz.ch/index.php?act=searchoffer)                                                                | ETH\&UZH联办租房平台，具体步骤请见[云找房](<16 云找房.md>)篇&#xA;&#xA;此外，该平台也有很多本地居民和中介发布的租房信息                                                                                                                                         | 官方房源：&#xA;1\. 回复速度快&#xA;2\. 申请成功率较高&#xA;3\. 房租相对便宜&#xA;4\. 室友都是学生&#xA;5\. 无需收入证明&#xA;&#xA;第三方房源：&#xA;1\. 非官方房源选择丰富 | 官方房源：&#xA;1\. 竞争激烈，新房源上架后很快抢空&#xA;2\. 每人只有一次分配宿舍的机会，选择余地小&#xA;&#xA;第三方房源&#xA;1\. 可能是骗子&#xA;2\. 房东可能只会德语 |
-| [Student Village](https://studentvillage.ch/en/)&#xA;[Living Science](https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0) | ETH学生宿舍&#xA;&#xA;基本上不太可能通过SV和LV的官网拿到房，而是通过[Facebook群组](https://www.facebook.com/groups/svzurich/)和微信群接手房间。建议多多关注[Facebook群组](https://www.facebook.com/groups/svzurich/)，微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入 | 1. 室友都是学生&#xA;2\. 无需收入证明&#xA;3\. 有基本家具&#xA;4\. 在ETH Hönggerberg校区                                                  | 1. 竞争激烈&#xA;2\. 多人共享公共区域                                                                                |
-| [WOKO](https://www.woko.ch)                                                                                                       | 苏黎世学生租房网站                                                                                                                                                                                                          | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                                                                    | 1. 竞争激烈&#xA;2\. 大多需提早起租&#xA;3\. 多人共享公共区域（如厨房、浴室等）                                                       |
-| [JUWO](https://www.juwo.ch)                                                                                                       | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年                                                                                                                                                                       | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                                                               | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                                                                      |
-| [WFSS](https://www.wfss.ch/de/)                                                                                                   | 公益性质的学生租房组织，主要为学生提供在校外的廉价住房选择                                                                                                                                                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                                                                  | 1. 竞争激烈&#xA;2\. 房子多数有些老旧（但依然质量不错）                                                                       |
-| [ST-JUSTIN](https://justinus.ch/en/?cn-reloaded=1)                                                                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间                                                                                                                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里                                                       | 1. 竞争激烈&#xA;2\. 秋季需4月15日就开始申请&#xA;3\. 多人共享公共区域（如厨房、浴室等）                                                 |
-| 学联合作伙伴&#xA;INTERMEZZO&#xA;&#xA;详情见下文介绍                                                                                            | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司                                                                                                                                                                              | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                                                             | 1. 竞争激烈（尤其8-9月）&#xA;                                                                                    |
-| 微信群内转租&#xA;&#xA;新生群、二手群、搬家群、租房群、学联活动群等                                                                                            | 微信群上经常会有同学发布出房信息，你也可以发布求房信息                                                                                                                                                                                        | 中国人之间转租，沟通方便                                                                                                       | 1. 价格波动范围大&#xA;2\. 需甄别真实性                                                                               |
-| [学联论坛](https://forum.acssz.org/)                                                                                                  | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                                                                                                                                                                       | 中国人之间转租，沟通方便                                                                                                       | 1. 价格波动范围大&#xA;2\. 需甄别真实性                                                                               |
-
-
-***
-
-
-#### **学联合作伙伴——INTERMEZZO租房公司**
-
-
-
-
-
-
-:-: ![](.topwrite/assets/yangcyself.png =271)
-
-
-^
-
-
-#### **其它渠道**
-
-
-> [WG Zimmer ](https://www.wgzimmer.ch/home.html)
->
-> （WG是德语Wohngemeinschaft的缩写，英语译为shared apartment，中文译为合用公寓）
-> [Flatfox](https://flatfox.ch/c/en/)（可能比较偏好可以线下看房的客户，并且用德语申请的话也许回复率较高）
-> [comparis](https://en.comparis.ch/immobilien/search)
-> [RON ORP](http://www.ronorp.net/zuerich/dach-ueber-dem-kopf)
->
-> [Homegate](https://www.homegate.ch/en)
->
-> [Students](http://www.students.ch/wohnen/list)
->
-> [WG-Gesucht](https://www.wg-gesucht.de/)
->
-> [Room Estate ](https://roomestate.com/)（房源大多可以查看在住人信息，并且可以在线预定租赁，但是真实体验未知）
-
-
-学联只提供信息整理，对以上所有租房平台仅做推荐，不参与任何租房交易过程，不承担任何风险责任。
-
-
-预祝大家都能找到合适的房子！
-
-
-^
-
-
-### 4. **租房交易提醒**：&#x20;
-
-
-* **经典骗钱套路**是在你还没到瑞士前，请你转所谓的定金（~~Security deposit~~）给他，收到定金后他为你预订保留房间和合同。事实上，瑞士的正规租房程序**没有“定金”的说法**，不需要提前交定金！**要求提前交钱的都不要信**！类似这种可疑情况都不要转账！
-* **瑞士正规租房流程**是：
-
-
-1. **先签合同**（该合同一般为**德语**，因为德语合同在瑞士才具备法律效力。如果是英语合同，请一定要小心谨慎，很有可能是骗子），签完合同后安排看房，房东和你一起完成《房间现状记录表》，完成记录后房东将钥匙交给你。**在拿到钥匙打开房门那一刻之前，不要交任何的钱**（企业、中介及合作社的房源，如Livit，Intermezzo，WOKO，JUWO，WFSS房源等可酌情在拿到钥匙前交部分费用如押金，私人房东一定不要提前交钱）
-2. 一般情况下，在签完合同后，房产公司会为你开设一个在你名下的**银行押金账户**，开设该账户需要你签字授权，你交的押金将存放在该账户。**你的押金不应该放在房东私人或房产公司的账户里**。如果因转租确要汇款到二房东私人账户，必须在转租合同内写明
-3. 或者，在签完合同后，你也有可能是去签署一份**押金保险**（Mieterkautionsversicherung）并缴纳押金
-4. 你的**租金应该对公转账**，通过Einzahlungsschein（汇款单）或LSV（定期扣款授权协议）直接将租金转给房东（房产中介公司或私人产权所有者）账户
-
-
-* 和他人合租时，应避免“多人将租金/押金转到一位房客的私人账户后，再由该房客统一汇款给房东”的转账方式，而应该由各位房客分别且独立地对公转账，以避免不必要的租客间资金往来纠纷
-* Debit储蓄卡可以正式汇款转账，但Prepaid/Credit卡不行。请避免将大量金额一次性充入Prepaid/Credit卡，否则之后将无法进行正式转账（如使用Einzahlungsschein交房租，交学费等）且无法转回Debit储蓄卡，而只能自己购物消费或使用Twint进行非正式场合的转账交易
-
-
-^
-
-
-### 5. **租房注意事项**
-
-
 1. 所租房子是否能签署租房合同（有合同才能去人口登记办公室申报住址）
 2. 确认房费是否包含水电网暖气电视等费用，是否含有家具，**是否需要付费承接家具**（请务必提前约定清楚）。如果不包含家具，建议首先尝试收二手家具（微信群、本地二手平台、Facebook等，可直接谷歌搜索**second hand furniture zurich**），或在家附近捡一些居民不用的家具（带有**gratis**字样纸条），实在缺少再去[IKEA](https://www.ikea.com/ch/en/)添置。这边多数房间都是不带家具的，不要因为没有家具被劝退，自己置办家具也是不错的选择
 3. 如果是私人房东，则尽量选择线下见面签合同，签完合同同时应该完成钥匙的交接（房东应该给你钥匙）。如果是不动产管理公司（如Livit）/正规中介公司（如Intermezzo）/大型住房合作社（如WOKO，JUWO，WFSS），则有可能提前线上签合同，落地后再领取钥匙
 4. 签完合同后，房东或物业管理员应该和你一同确认房间现有破损状况，记录在检查单上，并由双方签字确认。如果入住后你发现了检查单上未记录的破损，且确实之前就已经存在（并非由你造成），请尽快告知房东（一般一个月内有效），以免退租时出现不必要的纠纷。如有需要可购买房屋保险（household insurance）
 5. WOKO注意事项：若博士在28岁前入住，之后可以继续续住。博士年收入超过26400CHF，每月要多交100CHF
 6. JUWO租房技巧：看房次数越多，拿到房子的可能性就越大
-
-
-^
-
-
-### **5. “注册”地址相关**
-
-
+#### **2.1 租房合同**
 总的来说，“注册地址”一词是很久以前坊间以讹传讹冒出来的词汇，其**不对应任何官方条文概念**。官方要求请见“[25 住址申报（“户口”）](25住址申报（“户口”）.md)”篇。
 
 
@@ -399,14 +95,7 @@ ETH\&UZH联办租房平台的，具体如何操作请见**以下步骤**：
 
 
 所谓收“注册”地址/出“注册”地址，其实就是开假的租房合同给你，实际上你并不住那里，只是让你可以先去申报住址。学联非常不推荐买卖“注册”地址（假合同），这是非法的，一旦被发现，将会导致一系列连锁的问题和麻烦。且移民局和人口登记办公室的文件都会寄到这个假地址，这样的话，你很有可能永远也拿不到这些文件了。
-
-
-^
-
-
-### **6. 110区相关**
-
-
+#### **2.2 房源地点**
 #### **什么是110区**
 
 
@@ -438,6 +127,172 @@ ETH\&UZH联办租房平台的，具体如何操作请见**以下步骤**：
 
 
 不一定。如上文所说，110区指苏黎世市区，其覆盖范围很大（交通月票/年票收费上算作2个区），即便房子在110区，其离你的主要上课校区可能依然很远（如单程通勤半小时）。重要的是考虑自己平时的主要上课校区、通勤时间、交通费、房租等因素并综合权衡，且同时考虑该房子是初来瑞士短租过渡还是未来2-3年的稳定长租。
+
+#### **2.3 房型**
+
+#### **2.4 家具情况**
+
+^
+
+### **3. 瑞士常用租房渠道汇总**
+
+#### **3.1 瑞士常用租房渠道一览**
+| 途径/渠道                                                                                                                             | 简介                                                                                                                                                                                                                 | 优点                                                                                                                 | 缺点                                                                                                      |
+| --------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------- |
+| [Housing Office](https://wohnen.ethz.ch/index.php?act=searchoffer)                                                                | ETH\&UZH联办租房平台，具体步骤请见[云找房](<16 云找房.md>)篇&#xA;&#xA;此外，该平台也有很多本地居民和中介发布的租房信息                                                                                                                                         | 官方房源：&#xA;1\. 回复速度快&#xA;2\. 申请成功率较高&#xA;3\. 房租相对便宜&#xA;4\. 室友都是学生&#xA;5\. 无需收入证明&#xA;&#xA;第三方房源：&#xA;1\. 非官方房源选择丰富 | 官方房源：&#xA;1\. 竞争激烈，新房源上架后很快抢空&#xA;2\. 每人只有一次分配宿舍的机会，选择余地小&#xA;&#xA;第三方房源&#xA;1\. 可能是骗子&#xA;2\. 房东可能只会德语 |
+| [Student Village](https://studentvillage.ch/en/)&#xA;[Living Science](https://www.livingscience.ch/wohnen-studieren-zuerich/?L=0) | ETH学生宿舍&#xA;&#xA;基本上不太可能通过SV和LV的官网拿到房，而是通过[Facebook群组](https://www.facebook.com/groups/svzurich/)和微信群接手房间。建议多多关注[Facebook群组](https://www.facebook.com/groups/svzurich/)，微信群名为”SV的宝宝们“，长期500人满员，可以联系在群中的朋友在有空位时将你拉入 | 1. 室友都是学生&#xA;2\. 无需收入证明&#xA;3\. 有基本家具&#xA;4\. 在ETH Hönggerberg校区                                                  | 1. 竞争激烈&#xA;2\. 多人共享公共区域                                                                                |
+| [WOKO](https://www.woko.ch)                                                                                                       | 苏黎世学生租房网站                                                                                                                                                                                                          | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 有基本家具                                                                    | 1. 竞争激烈&#xA;2\. 大多需提早起租&#xA;3\. 多人共享公共区域（如厨房、浴室等）                                                       |
+| [JUWO](https://www.juwo.ch)                                                                                                       | 青年住房组织，适合年龄在16-28岁，年收入小于30000瑞，处于学习或者实习阶段的青年                                                                                                                                                                       | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠&#xA;4\. 适合28岁以下的同学                                                               | 1. 竞争激烈&#xA;2\. 等待时间长&#xA;3\. 没有家具                                                                      |
+| [WFSS](https://www.wfss.ch/de/)                                                                                                   | 公益性质的学生租房组织，主要为学生提供在校外的廉价住房选择                                                                                                                                                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 可靠                                                                                  | 1. 竞争激烈&#xA;2\. 房子多数有些老旧（但依然质量不错）                                                                       |
+| [ST-JUSTIN](https://justinus.ch/en/?cn-reloaded=1)                                                                                | 由Christian Catholic Oeuvre St-Justin经营的国际学生宿舍，有65间面积大小不同的学生房间                                                                                                                                                      | 1. 价格优惠&#xA;2\. 无需收入证明&#xA;3\. 国籍多样化&#xA;4\. 距离ETH和UZH主校仅2公里                                                       | 1. 竞争激烈&#xA;2\. 秋季需4月15日就开始申请&#xA;3\. 多人共享公共区域（如厨房、浴室等）                                                 |
+| 学联合作伙伴&#xA;INTERMEZZO&#xA;&#xA;详情见下文介绍                                                                                            | 是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司                                                                                                                                                                              | 1. 价格相对优惠&#xA;2\. 沟通更加方便&#xA;3\. 有基本家具                                                                             | 1. 竞争激烈（尤其8-9月）&#xA;                                                                                    |
+| 微信群内转租&#xA;&#xA;新生群、二手群、搬家群、租房群、学联活动群等                                                                                            | 微信群上经常会有同学发布出房信息，你也可以发布求房信息                                                                                                                                                                                        | 中国人之间转租，沟通方便                                                                                                       | 1. 价格波动范围大&#xA;2\. 需甄别真实性                                                                               |
+| [学联论坛](https://forum.acssz.org/)                                                                                                  | 学联论坛上经常会有同学发布出房信息，你也可以发布求房信息                                                                                                                                                                                       | 中国人之间转租，沟通方便                                                                                                       | 1. 价格波动范围大&#xA;2\. 需甄别真实性                                                                               |
+
+#### **3.2 ETH&UZH联办租房平台**
+
+> [info] *该渠道既适用于在苏黎世找房的同学，也适用于在国内远程找房的同学；且回复速度和申请成功率较高。*
+
+> [warning] 本章节部分内容自相矛盾，需要额外核实
+
+##### **3.2.1 平台介绍**
+##### **3.2.2 注册和租房步骤**
+【第一步】打开[ETH\&UZH联办租房平台](https://wohnen.ethz.ch/index.php?act=searchoffer)并注册。在注册界面的“I am”栏，
+- 新生应选择”Incoming student“
+- 老生应选择”Student“
+
+提交约1天后会收到注册成功邮件。
+
+【第二步】登录该平台并在筛选器中选择”show all adverts“，此时将列出现时所有可用房源，其中主要包含：
+- 私人房东上传的房源
+- WOKO房源，其一般有以下特征：
+➢ 租金为550-770 CHF/月（近期价格有上调）
+➢ 房源类别为”shared apartment“
+➢ 可用时间为自9月1日起
+➢ 联系方式为<housing@ethz.ch>
+
+其中，前者的租房具体流程与社会渠道无异，具体以房东要求为准。**本章节主要介绍后者的租房流程。** 此外，部分房源对申请人有年龄和/或身份限制，此项在房源描述（Description）部分可见。例如，’’Age limit 28 years, Reserved for incoming UZH Master HS23 students“代表该房源仅供28岁以下的2023年秋季学期UZH硕士新生申请，请仔细甄别。
+点击No一栏可以让编号按时间排序，直接在最后几行看新上的房源；
+可设制“新上房源邮件提醒功能”。在Search accommodation 页面，选择Search agent，设制自己期望的房源类型、整租或合租、城市、租金区间、可租时间、是否带家具等内容（不一定是woko，也可能是私人房东），一旦有符合期望的新上房源，ETH\&UZH联办租房平台会自动发送邮件，让租房人实时获得最新房源信息。设置后建议定期及时查看邮箱，如看到心仪的房源，即刻申请。
+
+【第三步】在该平台找到心仪的WOKO房源后，通过邮件（<housing@ethz.ch>）发送租房申请，邮件中须包含：
+- 房源编号
+- 申请人身份
+
+此外，最好在邮件中表明申请人的出生日期并将录取通知书作为附件上传以避免被追问。
+一般，Housing Office回复十分迅速。若房源可用，半天内即可收到带有房源注册表格链接的邮件，此时需要填写并提交该表格，并及时回复邮件告知Housing Office已注册。注册后约半小时即可收到房子的offer。
+若在瑞士工作时间发送租房申请邮件，但3小时内未收到Housing Office回复的，或告知Housing Office已注册完成后1小时内未收到offer的，建议检查垃圾邮件。若垃圾邮件中也未找到，可能代表消息被遗漏，此时可酌情再发邮件追问。
+
+> 请注意，每个人**有且只有一次**向Housing Office申请住房的机会。Housing Office会随机分发有空的房子，有可能不是你希望申请的那一套。
+（属于是开盲盒）。如果分配到房子没有在48h内确认（ETH），则会失去分配的机会；
+1\) UZH房源较少，上架后最多2天就会抢完，晚申请可能会进入wating list。可提前与Housing Office联系，询问什么时候上新房源，并在上架时间不停刷新网页；
+3\) 年龄超过28岁的也可以给<housing@ethz.ch>发邮件，将可能收到woko其它地方价格稍贵的房子的offer，比28岁以下贵100-200CHF；
+5\) 根据大家的分享，ETH给的都是半年，UZH大部分给的都是一年。理论上不可以转租；
+
+
+
+#### **3.2 学联伙伴Intermezzo租房中介公司**
+> [info] *该渠道既适用于在苏黎世找房的同学，也适用于在国内远程找房的同学。*
+##### **3.2.1 Intermezzo租房中介公司及其房源介绍**
+Intermezzo是一家由瑞士本地致力于利用苏黎世地区空置物业和公寓提供中短租的小型租房公司，也是学联的合作伙伴。其提供的住房：
+- 地点：主要位于苏黎世市区，距离ETH/UZH主校、ZHAW、Oerlikon、Irchel、ETH Hönggerberg均较近；
+- 房型：包括但不限于
+➢ 单人的”2.5房“公寓（Studio）
+➢ 3-4人合租的”4.5房“公寓
+➢ 8人以上合租的独栋湖景别墅
+- 价格：
+➢ 租金**每月650.00-1200.00瑞士法郎不等**，包含水、电、网、暖等费用
+➢ 押二付一，先住后付，不需提前支付任何费用
+- 起租时间：除非另行说明，Intermezzo房源的起租时间一般为 **”自发布之时可用“**
+- 合同期限：
+➢ 灵活终止合同
+➢ **仅提供有固定租期限制的公寓，不提供无限可续的公寓**
+- 设施：提供基本家具（一般为每间房一张床、一张床垫、一把椅子、一张桌子、一盏台灯和一个壁橱）和厨房设备（洗碗机、烤箱、锅碗瓢盆），且有公用洗衣房。
+
+
+##### **3.2.2 申请租房流程**
+**申请流程**：确定需求；填写申请表；签署合同；入住对接；押租金。
+【第〇步】**请进入Intermezzo2023Fall微信群并认真阅读群公告**。由于该群已达200人，请添加学联杨同学微信，以便其邀请你进群:
+![](.topwrite/assets/yangcyself.png =250)
+进群后即可添加Intermezzo员工Alex的微信（请务必**使用德语或英语与Alex联系**）。Alex将在其**朋友圈**中发布所有可供出租的房源。有时，Alex也会在群中分享可供出租的房源。每个房源的**申请表格链接**都在其所对应朋友圈的**评论**部分。如果申请表不可见，则代表该房源目前已被预订/租出。
+【第一步】如找到中意房源的，请在通过微信告知Alex你的姓名（拼音），并将填妥的租房申请表格发回。
+> [warning] 【学联提醒】
+> - 除非另行说明，申请表格上的”起租时间“**必须在提交申请后两周以内**，因此勿向Intermezzo发送远期（如1个月以上）租房申请。
+> - 如房源为多人合租的，可选择与朋友共同申请整套房源，亦可单独申请其中的一个房间。
+
+【第二步】等待Alex的回复。一般，Intermezzo的房源分配遵循先到先得原则。
+如Alex告知已将申请表转发给其同事以准备合同，该申请即成功。**此时如取消合同，会进入黑名单（即无法再通过该渠道找房）或需要缴纳50瑞郎的罚金。**
+如Alex告知该房已出租，则返回第一步。
+【第三步】签署合同、安排房屋交接（见前文）
+
+
+- 优点
+➢ 价格相对优惠
+➢ 沟通更加方便
+➢ 有基本家具
+- 缺点
+
+
+*
+#### **3.3 其他学生专用租房渠道**
+> [info] *该渠道主要适用于在苏黎世找房的同学。*
+
+* [Student Village](https://studentvillage.ch/) & [Living Sceinece](https://www.livingscience.ch/wohnen-studieren-zuerich/?id=\&L=1)：有基本家具，拎包入住（仅限ETH学生）
+  *一般不太可能通过SV和LS官网找到房，而是通过*[Facebook群组](https://www.facebook.com/groups/svzurich/)*和微信群。微信群名为“SV的宝宝们”，长期500人满员，可以联系在群中的朋友在有空位时将你拉入*。
+* [wfs - wohnräume für studierende](https://www.wfss.ch/) Living spaces for students&#x20;
+* [学生WOKO](https://www.woko.ch/)：有基本家具，拎包入住。博士年收入超过26400CHF的，每月要多交100CHF
+* [学生JUWO](https://www.juwo.ch/)：没有家具。年龄限制在16-28岁间，年收入不能超过30000CHF
+* [Students](http://www.students.ch/wohnen/list)
+* [学联论坛](https://forum.acssz.org/)：请自行甄别信息真实性，学联对任何租房信息都没有担保责任或义务
+* 学生微信群聊：新生群、学联活动群、二手群、租房群、搬家群等
+#### **3.4 社会租房渠道**
+> [info] *该渠道主要适用于在苏黎世找房的同学。*
+
+* [WG Zimmer ](https://www.wgzimmer.ch/home.html)
+  （WG是德语Wohngemeinschaft的缩写，英语译为shared apartment，中文译为合用公寓）
+* [Flatfox](https://flatfox.ch/c/en/)
+  （可能比较偏好可以线下看房的客户，并且用德语申请的话也许回复率较高）
+* [comparis](https://en.comparis.ch/immobilien/search)
+* [RON ORP](http://www.ronorp.net/zuerich/dach-ueber-dem-kopf)
+* [Homegate](https://www.homegate.ch/en)
+* [WG-Gesucht](https://www.wg-gesucht.de/)
+* [Room Estate](https://roomestate.com/)
+  （房源大多可以查看在住人信息，并且可以在线预定租赁，但是真实体验未知）
+
+
+^
+
+
+### **3. ”注册地址“相关**
+
+
+^
+### **4. 未找到房时的在瑞临时安顿**
+* 酒店：酒店比较昂贵，一般只适用于极短期（一周内）
+* 民宿/青旅：价格相对合理，而且可以做饭。可以找适合多人住的民宿，然后在群里找同学一起拼
+
+
+> 有些民宿或青旅居住时长超过1个月会签租房合同（提前与店家确认），可以拿这个合同去人口登记办公室申报住址
+>
+> 如确实找不到房，建议**最晚在八月中旬**预定好民宿/青旅，否则之后即便是民宿和青旅也一房难求
+
+
+* 学长学姐/朋友家
+* 群里的短租：自行甄别筛选
+
+
+学联只提供信息整理，对以上所有租房平台仅做推荐，不参与任何租房交易过程，不承担任何风险责任。
+
+
+预祝大家都能找到合适的房子！
+
+
+
+
+
+
+
+
 
 
 
